--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,8 +10,8 @@
 
 button {
     font-size: 3rem;
-    padding-top: 5px 10px 5px 10px;
-    color: limegreen;
+    padding: 5px 10px 5px 10px;
+    color: #40ff80;
     justify-content: space-around;
     text-transform: capitalize;
     background: none;
