--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,24 +11,25 @@
 
 <body>
     <div id="navbar">
-        <div class="counter">
-            <span id="dd">364</span>
+        <div class="play">
+            <button class="button go"></button>
         </div>
         <div class="counter">
-            <span id="hh">23</span>
+            <span class='digits' id="dd">364</span>
         </div>
         <div class="counter">
-            <span id="mm">59</span>
+            <span class='digits' id="hh">23</span>
         </div>
         <div class="counter">
-            <span id="ss">59</span>
+            <span class='digits' id="mm">59</span>
+        </div>
+        <div class="counter">
+            <span class='digits' id="ss">59</span>
         </div>
     </div>
     <div id="tree">
         <img src="images/Christmas_tree.svg" alt="">
     </div>
-    <div id="play">
-        <button>დაკვრა</button>
     </div>
     <audio src="audio/12_Days_of_Christmas_Instrumental.mp3"></audio>
     <audio src="audio/Canon_and_Variation.mp3"></audio>
