--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,30 +5,32 @@
 
 .play {
     display: flex;
-    background-color: #609030;
-    border: none;
-    border-radius: 25%;
     padding: 0.4rem 0.8rem;
+    border: 3px solid darkslategrey;
+    border-radius: 33%;
+    padding: 0.4rem 0.4rem 0.4rem 0.8rem;
 }
 
-button.go {
+button {
     width: 3rem;
     height: 3rem;
-    border-style: solid;
-    border-width: 1.5rem 0rem 1.5rem 3rem;
-    border-color: transparent transparent transparent #202020;
     background: none;
     padding: 0px;
     box-sizing: border-box;
     outline: none;
+    border-radius: 10%;
+}
+
+button.go {
+    border-style: solid;
+    border-width: 1.5rem 0rem 1.5rem 3rem;
+    border-color: transparent transparent transparent #309060;
 }
 
 button.pause {
     border-style: double;
-    border-width: 0rem 0rem 0rem 2rem;
-    border-color: #202020;
-    background: none;
-    outline: none;
+    border-width: 0rem 0rem 0rem 2.5rem;
+    border-color: #309060;
 }
 
 #navbar {
